--- a/.env
+++ b/.env
@@ -10,6 +10,9 @@ DB_DATABASE=crh
 DB_USERNAME=root
 DB_PASSWORD=root
 
+UPLOAD_DIR=D:/phpStudy/WWW/vue-lumen/static/
+FILE_PATH=http://api.test.com/static/
+
 CACHE_DRIVER=memcached
 QUEUE_DRIVER=sync
 APPID=c2740f457c01e550
