--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_PASSWORD=root
 UPLOAD_DIR=D:/phpStudy/WWW/vue-lumen/static/
 FILE_PATH=http://api.test.com/static/
 
-CACHE_DRIVER=memcached
+CACHE_DRIVER=file
 QUEUE_DRIVER=sync
 APPID=c2740f457c01e550
 RUKE=a28e776eca4dcb80d6e13d67b874a100
