--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ DB_DATABASE=crh
 DB_USERNAME=root
 DB_PASSWORD=root
 
-UPLOAD_DIR=D:/phpStudy/WWW/vue-lumen/static/
-FILE_PATH=http://api.test.com/static/
+UPLOAD_DIR=/var/www/appitruke/static/
+FILE_PATH=http://app.itruke.com/static/
 
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
