--- a/.env
+++ b/.env
@@ -17,3 +17,14 @@ CACHE_DRIVER=file
 QUEUE_DRIVER=sync
 APPID=c2740f457c01e550
 RUKE=a28e776eca4dcb80d6e13d67b874a100
+
+WECHAT_APPID=wxd8d9232bdc894a5e
+WECHAT_SECRET=fbe47dab393b6656752890ec955b7d33
+WECHAT_TOKEN=itruke
+#WECHAT_AES_KEY
+#
+#WECHAT_LOG_LEVEL
+#WECHAT_LOG_FILE
+#
+WECHAT_OAUTH_SCOPES=snsapi_base
+WECHAT_OAUTH_CALLBACK=http://leya.51leya.cn/wx/relogin
