--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "vlucas/phpdotenv": "~2.2",
         "jenssegers/agent": "^2.5",
         "zhuzhichao/ip-location-zh": "^2.2",
-        "mylukin/ip2city": "dev-master"
+        "mylukin/ip2city": "dev-master",
+        "overtrue/wechat": "^3.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
