--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=crh
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=dbroot
 
 UPLOAD_DIR=/var/www/appitruke/static/
 FILE_PATH=http://app.itruke.com/static/
